syntax = "proto3";
option java_multiple_files = true;
package health.safe.api.opencdx.grpc.audit;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

/**
 * Indicates the type of Audit event that is being recorded.
 */
enum AuditEventType {
  USER_LOGIN_SUCCEEDED = 0; // User successfully logged in.
  USER_LOGOUT = 1; // User logged out from system.
  USER_LOGIN_FAIL = 2; // User failed to login
  USER_ACCESS_CHANGE = 3; // User access changed
  USER_PASSWORD_CHANGE = 4; // User Password Change
  SYSTEM_LOGIN_SUCCEEDED = 5; // System successfully logged in.
  SYSTEM_LOGOUT = 6; // System logged out.
  SYSTEM_LOGIN_FAIL = 7; // System failed to login.
  PII_ACCESSED = 8; // Personal Identifiable Information accessed.
  PII_UPDATED = 9; // Personal Identifiable Information updated.
  PII_CREATED = 10; // Personal Identifiable Information created.
  PII_DELETED = 11; // Personal Identifiable Information deleted.
  PHI_ACCESSED = 12; // Personal Health Information accessed.
  PHI_UPDATED = 13; // Personal Health Information updated.
  PHI_CREATED = 14; // Personal Health Information created.
  PHI_DELETED = 15; // Personal Health Information deleted.
  CONFIG = 16; // Configuration information changed.
}

/**
 * Indicates the sensitivity level of the data contained
 * in this audit message.
 */
enum SensitivityLevel {
  LOW = 0; // Information is not sensitive.
  MEDIUM = 1; // Information could be used to identify an individual.
  HIGH = 2; // Personal information is contained.
}

/**
 * Indicates if the actor is a Human, System or another entity.
 */
enum AgentType {
  HUMAN_USER = 0; // The actor is a human.
  SYSTEM = 1; // The actor is a system.
  OTHER_ENTITY = 2; // The actor is a separate entity.
}

/**
 * Identifies the identity that initiated this audit.
 */
message Actor {
  string identity = 1; // UUID identifying the identity.
  string role = 2; // The role the actor had when initiated.
  string network_address = 3; // Network address from actor when initiated.
  AgentType agentType = 4; // Indicates if the actor is a Human, System or another entity.
}

/**
 * Contains the relevant data for this audit.
 */
message DataObject {
  string resource = 1; //
  google.protobuf.Any data = 2; // Data block recorded for Audit System
  SensitivityLevel sensitivity = 3; // Indicates the sensitivity level of this data.
}

/**
 * Source of the Audit event.
 */
message AuditSource {
  string system_info = 1; // System Name
  string configuration = 2; // Relevant configuration information.
}

/**
 * Identifies whose information is being acted on.
 */
message AuditEntity {
  string patient_identifier = 1; // National Health Identifier
  string user_identifier = 2; // UUID for the patient's user ID
}

/**
 * Audit Event information to record.
 */
message AuditEvent {
  google.protobuf.Timestamp created = 1; // Timestamp when this event occurred.
  AuditEventType event_type = 2; // Identifies the type of event.
  Actor actor = 3; // Identifies who is causing the action
  DataObject data_object = 4; // Data that is being acted on.
  string purpose_of_use = 5; // Description of use of this data.
  AuditSource audit_source = 6; // Where did the event originate
  AuditEntity audit_entity = 7; // Identifies whose data is being acted on.
  AgentType agent_type = 8; // identifies the type of actor
}


